tests/baselines/reference/exportDeclaredModule.errors.txt
tests/cases/conformance/externalModules/foo1.ts(6,1): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/conformance/externalModules/foo2.ts (0 errors) ====
    import foo1 = require('./foo1');
    var x: number = foo1.b();
==== tests/cases/conformance/externalModules/foo1.ts (1 errors) ====
    
    declare module M1 {
    	export var a: string; 
    	export function b(): number;
    }
    export = M1;
    ~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
    